force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/COD_ICOD_Tag_Option__c.field-meta.xml
<CustomField>
    <fullName>COD_ICOD_Tag_Option__c</fullName>
    <label>COD/ICOD Tag Option</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Credit Card Payment</fullName>
            </value>
            <value>
                <fullName>Goodwill</fullName>
            </value>
            <value>
                <fullName>ICOD Prepaid via Online Portal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>