force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/COD_Payment_Issue__c.field-meta.xml
<CustomField>
    <fullName>COD_Payment_Issue__c</fullName>
    <label>COD Payment Issue</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>COD payment not returned 10 business days after delivery</fullName>
            </value>
            <value>
                <fullName>Wrong COD amount was collected and/or received</fullName>
            </value>
            <value>
                <fullName>Wrong type of COD payemnt was received (regular check instead of certifed)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>