force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/COD_Statement_Date__c.field-meta.xml
<CustomField>
    <fullName>COD_Statement_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>COD Statement Date</label>
    <type>Date</type>
</CustomField>