force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/COD_Statement_Number__c.field-meta.xml
<CustomField>
    <fullName>COD_Statement_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>COD Statement Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>