force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/Collection_Contact_Third_Party__c.field-meta.xml
<CustomField>
    <fullName>Collection_Contact_Third_Party__c</fullName>
    <label>Collection Contact -Third Party</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Auto-Dialer Call or Email Received</fullName>
            </value>
            <value>
                <fullName>Close Receivable Management File</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>