force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/Commodity_Approval_Request__c.field-meta.xml
<CustomField>
    <fullName>Commodity_Approval_Request__c</fullName>
    <label>Commodity Approval Request</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dry Ice - Ship Internationally (Intl only)</fullName>
            </value>
            <value>
                <fullName>Tobacco / Vaping Products</fullName>
            </value>
            <value>
                <fullName>Wine</fullName>
            </value>
            <value>
                <fullName>Beer</fullName>
            </value>
            <value>
                <fullName>Other Alcoholic Beverages</fullName>
            </value>
            <value>
                <fullName>Firearms - Ship 2DA</fullName>
            </value>
            <value>
                <fullName>Online pharmacy</fullName>
            </value>
            <value>
                <fullName>Animals</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>