force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/Company_Employee_Position__c.field-meta.xml
<CustomField>
    <fullName>Company_Employee_Position__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Company/Employee Position</label>
    <length>20</length>
    <type>Text</type>
</CustomField>