force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/Company_or_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_or_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Company or Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>