force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/Consign_to__c.field-meta.xml
<CustomField>
    <fullName>Consign_to__c</fullName>
    <label>Consign to?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Broker</fullName>
            </value>
            <value>
                <fullName>Clears Own</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>