force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/Consignment_Reconsignment_Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Consignment_Reconsignment_Request_Type__c</fullName>
    <label>Consignment/Reconsignment Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alternate Broker Reconsignment</fullName>
            </value>
            <value>
                <fullName>Urgent Consignment Request</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>