force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/Contact_Center_Inquiry__c.field-meta.xml
<CustomField>
    <fullName>Contact_Center_Inquiry__c</fullName>
    <label>Contact Center Inquiry</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cash Invoice Amount Higher than Paid on Pickup</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>