force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/Contents_Not_Mine__c.field-meta.xml
<CustomField>
    <fullName>Contents_Not_Mine__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contents Not Mine</label>
    <type>Checkbox</type>
</CustomField>