force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/Contents_Product__c.field-meta.xml
<CustomField>
    <fullName>Contents_Product__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Contents/Product</label>
    <length>255</length>
    <type>Text</type>
</CustomField>