force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/Contract_Request__c.field-meta.xml
<CustomField>
    <fullName>Contract_Request__c</fullName>
    <label>Contract Request</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Copy of Contract</fullName>
            </value>
            <value>
                <fullName>Inquiry about Current Contract</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>