force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/Contractual_Service_Request__c.field-meta.xml
<CustomField>
    <fullName>Contractual_Service_Request__c</fullName>
    <label>Contractual Service Request</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Authorized Return Service</fullName>
            </value>
            <value>
                <fullName>Returns on the Web</fullName>
            </value>
            <value>
                <fullName>UPS Returns Flexible Access</fullName>
            </value>
            <value>
                <fullName>Hundredweight</fullName>
            </value>
            <value>
                <fullName>SurePost</fullName>
            </value>
            <value>
                <fullName>WorldEase (Intl Only)</fullName>
            </value>
            <value>
                <fullName>Third Country International Returns (Intl Only)</fullName>
            </value>
            <value>
                <fullName>U.S. to Mexico - Standard Service (Intl Only)</fullName>
            </value>
            <value>
                <fullName>COD Automatic</fullName>
            </value>
            <value>
                <fullName>COD Direct</fullName>
            </value>
            <value>
                <fullName>COD Secure</fullName>
            </value>
            <value>
                <fullName>Returns Exchange</fullName>
            </value>
            <value>
                <fullName>Consolidated Payment Plan</fullName>
            </value>
            <value>
                <fullName>Ground Freight Pricing</fullName>
            </value>
            <value>
                <fullName>Electronic Data Interchange (EDI)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>