force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/Control_Number__c.field-meta.xml
<CustomField>
    <fullName>Control_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Control Number</label>
    <length>12</length>
    <type>Text</type>
</CustomField>