force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/Correct_Address__c.field-meta.xml
<CustomField>
    <fullName>Correct_Address__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Correct Address</label>
    <type>TextArea</type>
</CustomField>