force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/Corrected_Delivery_Address__c.field-meta.xml
<CustomField>
    <fullName>Corrected_Delivery_Address__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Corrected Delivery Address</label>
    <type>TextArea</type>
</CustomField>