force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/Credit_Card_Payment__c.field-meta.xml
<CustomField>
    <fullName>Credit_Card_Payment__c</fullName>
    <label>Credit Card Payment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Credit card charge information</fullName>
            </value>
            <value>
                <fullName>GCS Credit card Refund</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>