force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/Critical_Package_eg_Medicine__c.field-meta.xml
<CustomField>
    <fullName>Critical_Package_eg_Medicine__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Critical Package (e.g. Medicine)</label>
    <type>Checkbox</type>
</CustomField>