force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/CTP_Request__c.field-meta.xml
<CustomField>
    <fullName>CTP_Request__c</fullName>
    <label>CTP Request</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CTP Fee (Billing Only)</fullName>
            </value>
            <value>
                <fullName>Equipment Upgrades</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>