force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/Current_Pickup_Time__c.field-meta.xml
<CustomField>
    <fullName>Current_Pickup_Time__c</fullName>
    <label>Current Pickup Time</label>
    <type>Time</type>
</CustomField>