force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/Customer_Feedback_Type__c.field-meta.xml
<CustomField>
    <fullName>Customer_Feedback_Type__c</fullName>
    <label>Customer Feedback Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Compliment</fullName>
            </value>
            <value>
                <fullName>Complaint</fullName>
            </value>
            <value>
                <fullName>Incident involving a UPS Vehicle</fullName>
            </value>
            <value>
                <fullName>Request information on Electronic Billing &amp; Resource Center</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>