force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/Customer_is_the_Canadian_Importer__c.field-meta.xml
<CustomField>
    <fullName>Customer_is_the_Canadian_Importer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer is the Canadian Importer?</label>
    <type>Checkbox</type>
</CustomField>