force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/Customer_Off_Time__c.field-meta.xml
<CustomField>
    <fullName>Customer_Off_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Customer Off Time</label>
    <length>11</length>
    <type>Text</type>
</CustomField>