force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/Customer_Wants_Package_Retrieved__c.field-meta.xml
<CustomField>
    <fullName>Customer_Wants_Package_Retrieved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Wants Package Retrieved</label>
    <type>Checkbox</type>
</CustomField>