force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/Customers_Email__c.field-meta.xml
<CustomField>
    <fullName>Customers_Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Customer&apos;s Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>