force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/Daily_Non_Daily_Account__c.field-meta.xml
<CustomField>
    <fullName>Daily_Non_Daily_Account__c</fullName>
    <label>Daily/Non-Daily Account</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Daily Account</fullName>
            </value>
            <value>
                <fullName>Non-Daily Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>