force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/Damage_Call_Tag_Follow_up__c.field-meta.xml
<CustomField>
    <fullName>Damage_Call_Tag_Follow_up__c</fullName>
    <label>Damage Call Tag Follow-up</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Transportable DCT No Pickup</fullName>
            </value>
            <value>
                <fullName>Transportable DCT Other</fullName>
            </value>
            <value>
                <fullName>Non-Transportable DCT Issued - No Contact</fullName>
            </value>
            <value>
                <fullName>Cancel Transportable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>