force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/Damage_Inquiry__c.field-meta.xml
<CustomField>
    <fullName>Damage_Inquiry__c</fullName>
    <label>Damage Inquiry</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Damage Report</fullName>
            </value>
            <value>
                <fullName>Damage Report Copy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>