force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/Date_of_Message__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Message__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date of Message</label>
    <type>Date</type>
</CustomField>