force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/Date_of_Mis_delivery__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Mis_delivery__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date of Mis-delivery</label>
    <type>Date</type>
</CustomField>