force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/Date_on_My_Choice_Letter__c.field-meta.xml
<CustomField>
    <fullName>Date_on_My_Choice_Letter__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date on My Choice Letter</label>
    <type>Date</type>
</CustomField>