force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/DCO_Type__c.field-meta.xml
<CustomField>
    <fullName>DCO_Type__c</fullName>
    <label>DCO Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Deliver my package to another address</fullName>
            </value>
            <value>
                <fullName>Deliver my package on another day</fullName>
            </value>
            <value>
                <fullName>Pickup my package at a UPS Location (Access Point)</fullName>
            </value>
            <value>
                <fullName>Authorize Shipment Release</fullName>
            </value>
            <value>
                <fullName>Leave with neighbor</fullName>
            </value>
            <value>
                <fullName>Return to Shipper</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>