force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/DCR_Date__c.field-meta.xml
<CustomField>
    <fullName>DCR_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>DCR Date</label>
    <type>Date</type>
</CustomField>