force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/DCR_Intercept_Prior_to_Attempt__c.field-meta.xml
<CustomField>
    <fullName>DCR_Intercept_Prior_to_Attempt__c</fullName>
    <label>DCR/Intercept Prior to Attempt</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DCR Prior to First Attempt (package is currently Out for Delivery)</fullName>
            </value>
            <value>
                <fullName>DCR - in Transit</fullName>
            </value>
            <value>
                <fullName>US DCR</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>