force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/DCR_Reason__c.field-meta.xml
<CustomField>
    <fullName>DCR_Reason__c</fullName>
    <label>DCR Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agent Delivery Area</fullName>
            </value>
            <value>
                <fullName>Change Request Before 1st Delivery Attempt</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>