force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/DCR_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>DCR_Sub_Type__c</fullName>
    <inlineHelpText>DCR SUB TYPE</inlineHelpText>
    <label>DCR Sub Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>DCR_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hot</fullName>
            </value>
            <value>
                <fullName>Cold</fullName>
            </value>
            <value>
                <fullName>Warm</fullName>
            </value>
            <value>
                <fullName>Very Warm</fullName>
            </value>
            <value>
                <fullName>Very Cold</fullName>
            </value>
            <value>
                <fullName>Very Hot</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>