force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/DCR_Type__c.field-meta.xml
<CustomField>
    <fullName>DCR_Type__c</fullName>
    <inlineHelpText>It is used as help text</inlineHelpText>
    <label>DCR Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Redeliver to my address</fullName>
            </value>
            <value>
                <fullName>Alternate Address</fullName>
            </value>
            <value>
                <fullName>Return To Shipper</fullName>
            </value>
            <value>
                <fullName>Deliver to Another Address</fullName>
            </value>
            <value>
                <fullName>Deliver on Another Day</fullName>
            </value>
            <value>
                <fullName>Hold for Pickup</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>