force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/DCR_Type_Prior_to_1st_Attempt__c.field-meta.xml
<CustomField>
    <fullName>DCR_Type_Prior_to_1st_Attempt__c</fullName>
    <label>DCR Type-Prior to 1st Attempt</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Address</fullName>
            </value>
            <value>
                <fullName>Future Delivery Date</fullName>
            </value>
            <value>
                <fullName>Same Day Will Call</fullName>
            </value>
            <value>
                <fullName>Will Call</fullName>
            </value>
            <value>
                <fullName>Stop Delivery &amp; Return to Shipper</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>