force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/Declared_Value__c.field-meta.xml
<CustomField>
    <fullName>Declared_Value__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Declared Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>