force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/Deliver_to__c.field-meta.xml
<CustomField>
    <fullName>Deliver_to__c</fullName>
    <label>Deliver to</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Same Address</fullName>
            </value>
            <value>
                <fullName>Access Point / Counter</fullName>
            </value>
            <value>
                <fullName>New Address</fullName>
            </value>
            <value>
                <fullName>Change Delivery Address</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>