force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/Delivery_Attempt_Date__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Attempt_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Delivery Attempt Date</label>
    <type>Date</type>
</CustomField>