force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/Delivery_Attempt_Issue__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Attempt_Issue__c</fullName>
    <label>Delivery Attempt Issue</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Other Exception</fullName>
            </value>
            <value>
                <fullName>Shipper Release Package Not Left</fullName>
            </value>
            <value>
                <fullName>Valid InfoNotice/No info in eTT-IVP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>