force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/Delivery_Change_Inquiry_Type__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Change_Inquiry_Type__c</fullName>
    <label>Delivery Change Inquiry Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Missed DCO</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>