force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/Delivery_Status__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Delivery Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>