force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/Destination_Country_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Destination_Country_Postal_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Destination Country/Postal Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>