force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/Destination_of_Most_Shipments__c.field-meta.xml
<CustomField>
    <fullName>Destination_of_Most_Shipments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Destination of Most Shipments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>