force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/Dimensions_for_all_packages__c.field-meta.xml
<CustomField>
    <fullName>Dimensions_for_all_packages__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Dimensions for all packages</label>
    <length>255</length>
    <type>Text</type>
</CustomField>