force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/Dispute__c.field-meta.xml
<CustomField>
    <fullName>Dispute__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dispute?</label>
    <type>Checkbox</type>
</CustomField>