force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/Disputed_Amount__c.field-meta.xml
<CustomField>
    <fullName>Disputed_Amount__c</fullName>
    <label>Disputed Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>