force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/Disputed_Claim_Payment_Issues__c.field-meta.xml
<CustomField>
    <fullName>Disputed_Claim_Payment_Issues__c</fullName>
    <label>Disputed Claim/Payment Issues</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Claim Amount / Processing</fullName>
            </value>
            <value>
                <fullName>Denied Claim Overturn</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>