force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/DRE__c.field-meta.xml
<CustomField>
    <fullName>DRE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DRE</label>
    <type>Checkbox</type>
</CustomField>