force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/Driver_Inquiry_Reason__c.field-meta.xml
<CustomField>
    <fullName>Driver_Inquiry_Reason__c</fullName>
    <label>Driver Inquiry Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Driver did not leave a copy waybill</fullName>
            </value>
            <value>
                <fullName>Driver filled out the waybill incorrectly</fullName>
            </value>
            <value>
                <fullName>Missing / incomplete Export documentation</fullName>
            </value>
            <value>
                <fullName>Driver came too early/late</fullName>
            </value>
            <value>
                <fullName>Customer disputes the pickup attempt</fullName>
            </value>
            <value>
                <fullName>Missing Tax ID # on Waybill</fullName>
            </value>
            <value>
                <fullName>Cash Receipt issue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>