force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/Driver_to_Return_Reason__c.field-meta.xml
<CustomField>
    <fullName>Driver_to_Return_Reason__c</fullName>
    <label>Driver to Return Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Driver to return to point of pickup</fullName>
            </value>
            <value>
                <fullName>Waybill Copy Request</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>