force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/EFT_Payment_Plans__c.field-meta.xml
<CustomField>
    <fullName>EFT_Payment_Plans__c</fullName>
    <label>EFT Payment Plans</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Brokerage / Import Account</fullName>
            </value>
            <value>
                <fullName>Billing EFT Plan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>