force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/ERN_Package_Type__c.field-meta.xml
<CustomField>
    <fullName>ERN_Package_Type__c</fullName>
    <label>ERN Package Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Import</fullName>
            </value>
            <value>
                <fullName>Export</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>