force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/EU_Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>EU_Payment_Method__c</fullName>
    <label>EU Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Credit card</fullName>
            </value>
            <value>
                <fullName>PayPal</fullName>
            </value>
            <value>
                <fullName>Dotpay</fullName>
            </value>
            <value>
                <fullName>Giropay</fullName>
            </value>
            <value>
                <fullName>IDEAL</fullName>
            </value>
            <value>
                <fullName>SOFORT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>