force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/Exception_Explanation_Needed__c.field-meta.xml
<CustomField>
    <fullName>Exception_Explanation_Needed__c</fullName>
    <label>Exception Explanation Needed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>G6 - Delay Secure Scan</fullName>
            </value>
            <value>
                <fullName>Unable to determine Time in Transit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>