force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/Existing_Pickup_Inquiry_Type__c.field-meta.xml
<CustomField>
    <fullName>Existing_Pickup_Inquiry_Type__c</fullName>
    <label>Existing Pickup Inquiry Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Large Pickup</fullName>
            </value>
            <value>
                <fullName>Temporary Change to Pickup Availability</fullName>
            </value>
            <value>
                <fullName>Pickup attempted at old Daily Pickup Address</fullName>
            </value>
            <value>
                <fullName>Account Holder does not Recognize Shipment Billed on their Account</fullName>
            </value>
            <value>
                <fullName>Cash Invoice Amount Higher than Paid on Pickup</fullName>
            </value>
            <value>
                <fullName>Possible missed On-call pickup</fullName>
            </value>
            <value>
                <fullName>Possible missed Daily pickup</fullName>
            </value>
            <value>
                <fullName>Return package to pickup location (same day only)</fullName>
            </value>
            <value>
                <fullName>Existing Pickup Inquiry</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>