force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/Existing_Pickup_Options__c.field-meta.xml
<CustomField>
    <fullName>Existing_Pickup_Options__c</fullName>
    <label>Existing Pickup Options</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cancel Pickup</fullName>
            </value>
            <value>
                <fullName>Modify Existing Pickup</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>